--- a/vars.ini
+++ b/vars.ini
@@ -1,11 +1,11 @@
 # Number of stars
-20000
+5000
 
 # Pseudosample mu
-0,0,0
+2,3,-1
 
 # Sigma
-30,30,30
+30,25,35
 
 # Number of bins
 40,40,40
@@ -20,7 +20,10 @@
 5,-1,2
 
 # Sigma guess
-50,50,50
+30,20,40
 
 # Alpha smoothing parameters
-1e-10
+3.4e-10
+
+# Filename of data
+'gaiadr2_25pc.fits'
