Some small bugfixes for reading tables and plotting

--- a/vars.ini
+++ b/vars.ini
@@ -8,13 +8,13 @@
 30,25,35
 
 # Number of bins
-40,40,40
+10,10,10
 
 # Minimum cartesian velocities
 -200,-200,-200
 
 # Bin sizes
-10,10,10
+40,40,40
 
 # Mu guess
 5,-1,2
@@ -26,4 +26,4 @@
 3.4e-10
 
 # Filename of data
-'gaiadr2_25pc.fits'
+gaiadr2_25pc.fits
