Rewrote Deproject_exe and opt_alpha to work with GDR2 data

--- a/alpha_vars.ini
+++ b/alpha_vars.ini
@@ -1,14 +1,8 @@
 # Number of stars (N)
-5000
+1000
 
 # Number of samples (M)
-10
-
-# Pseudosample mu
-0,0,0
-
-# Sigma
-50,50,50
+2
 
 # Number of bins
 10,10,10
@@ -21,3 +15,6 @@
 
 # alpha0
 1e-10
+
+# Filename of data, for pseudodata set blank
+gaiadr2_25pc.fits
