--- a/vars.ini
+++ b/vars.ini
@@ -1,20 +1,14 @@
 # Number of stars
 5000
 
-# Pseudosample mu
-2,3,-1
-
-# Sigma
-30,25,35
-
 # Number of bins
-10,10,10
+60,60,60
 
 # Minimum cartesian velocities
 -200,-200,-200
 
 # Bin sizes
-40,40,40
+5,5,5
 
 # Mu guess
 5,-1,2
@@ -23,7 +17,7 @@
 30,20,40
 
 # Alpha smoothing parameters
-3.4e-10
+2.78e-9
 
-# Filename of data
+# Filename of data, for pseudodata set blank
 gaiadr2_25pc.fits
