Long overdue update from DM. Changes in Changes.txt and Documentation/RunningNotes.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
-
-*.csv
-__pycache__/Deproject_v0.cpython-36.pyc
-__pycache__/Deproject_plots.cpython-36.pyc
-__pycache__/Deproject_test.cpython-36.pyc
+*.png
+*_for_sh.py
+*_testing
+gss_struct.py
+PaulRunsSomeChecks.ipynb
+speedtest.py
+testrun*
+timecheck.py
+coltest.py
+older_opt_alpha_files.py
+opt_alpha_debug.py
+logs/
+__pycache__/
+DATA/
+RUNS/
+venv/
