--- a/alpha_vars.ini
+++ b/alpha_vars.ini
@@ -1,20 +1,54 @@
 # Number of stars (N)
-1000
+10000
 
 # Number of samples (M)
-2
+5
 
 # Number of bins
-10,10,10
+66,50,40
 
 # Minimum cartesian velocities
--200,-200,-200
+-99,-100,-60
 
 # Bin sizes
-40,40,40
+3,3,3
 
 # alpha0
-1e-10
+1e-9
+
+# Use non-isotropic DB89 = 1|0
+1
+
+# Optimization tolerance
+0.1
+
+# MISE minima search tolerance
+0.1
 
 # Filename of data, for pseudodata set blank
-gaiadr2_25pc.fits
+wd_sample.table
+
+
+
+
+# Number of stars (N)
+#20000
+
+# Number of samples (M)
+#5
+
+# Number of bins
+#50,66,10
+
+# Minimum cartesian velocities
+#-80,-99,-10
+
+# Bin sizes
+#3,3,3
+
+# alpha0
+#1e-10
+
+# Filename of data, for pseudodata set blank
+#Distances_PJM2017.csv
+
