--- a/vars.ini
+++ b/vars.ini
@@ -2,22 +2,35 @@
 10000
 
 # Number of bins
-60,60,60
+66,50,40
 
 # Minimum cartesian velocities
--200,-200,-200
+-99,-100,-60
 
 # Bin sizes
-5,5,5
+3,3,3
+
+# Use guess|DB89 = 1|0
+0
+
+# Use non-isotropic DB89 = 1|0
+1
 
 # Mu guess
-5,-1,2
+3,-10,-2
 
 # Sigma guess
-30,20,40
+30,20,15
 
 # Alpha smoothing parameters
-2.78e-9
+1.00000000e-08
 
 # Filename of data, for pseudodata set blank
-gaiadr2_100pc_clean.fits
+full_sample.table
+
+# Do you want to log this run (Produce logfiles and save plots)? 1|0
+1
+
+# Specify if you want to plot the change i L during maximization at the end ()
+#8.975443896696267e-09
+
