Split Max_L() into two functions. Added a testing notebook of my own

--- a/vars.ini
+++ b/vars.ini
@@ -26,10 +26,10 @@
 1.00000000e-08
 
 # Filename of data, for pseudodata set blank
-full_sample.table
+wd_sample.table
 
 # Do you want to log this run (Produce logfiles and save plots)? 1|0
-1
+0
 
 # Specify if you want to plot the change i L during maximization at the end ()
 #8.975443896696267e-09
