Recovered lost files and pushed
- Thanks to Eero, I didn't lose progress.
- Created a testing branch with the latest changes and will add testing data for Eero here soon

--- a/vars.ini
+++ b/vars.ini
@@ -2,16 +2,16 @@
 10000
 
 # Number of bins
-66,50,40
+100,100,70
 
 # Minimum cartesian velocities
--99,-100,-60
+-150,-150,-80
 
 # Bin sizes
-3,3,3
+3,2,2
 
 # Use guess|DB89 = 1|0
-0
+1
 
 # Use non-isotropic DB89 = 1|0
 1
@@ -23,14 +23,12 @@
 30,20,15
 
 # Alpha smoothing parameters
-1.00000000e-08
+4.64158883e-09
 
 # Filename of data, for pseudodata set blank
-wd_sample.table
+red_sample.table
 
 # Do you want to log this run (Produce logfiles and save plots)? 1|0
-0
+1
 
-# Specify if you want to plot the change i L during maximization at the end ()
-#8.975443896696267e-09
 
