Added testing samples
- Added files vars.txt and output.txt to use with pytest
- When modifying KvalsNumpyMethod and KvalsBlockMethod, use broadcasting_test.py with pytest to verify that it works correctly.
- Code is ready for @eerovaher to investigate making the two Kvals functions not rely on loops.

--- a/vars.ini
+++ b/vars.ini
@@ -26,7 +26,7 @@
 4.64158883e-09
 
 # Filename of data, for pseudodata set blank
-red_sample.table
+full_sample.table
 
 # Do you want to log this run (Produce logfiles and save plots)? 1|0
 1
