--- a/vars.ini
+++ b/vars.ini
@@ -23,10 +23,10 @@
 30,20,15
 
 # Alpha smoothing parameters
-4.64158883e-09
+5.00000000e-10
 
 # Filename of data, for pseudodata set blank
-full_sample.table
+500pc/red_cut_9.vot
 
 # Do you want to log this run (Produce logfiles and save plots)? 1|0
 1
