--- a/vars.ini
+++ b/vars.ini
@@ -2,13 +2,13 @@
 10000
 
 # Number of bins
-100,100,70
+200,150,150
 
 # Minimum cartesian velocities
--150,-150,-80
+-200,-150,-150
 
 # Bin sizes
-3,2,2
+2,2,2
 
 # Use guess|DB89 = 1|0
 1
@@ -23,10 +23,10 @@
 30,20,15
 
 # Alpha smoothing parameters
-5.00000000e-10
+1.00000000e-11
 
 # Filename of data, for pseudodata set blank
-500pc/red_cut_9.vot
+500pc/3sigma/wds.vot
 
 # Do you want to log this run (Produce logfiles and save plots)? 1|0
 1
