--- a/INIT/example.ini
+++ b/INIT/example.ini
@@ -1,11 +1,8 @@
-# Number of stars
-10000
-
 # Number of bins
-400, 300, 300
+60, 60, 60
 
 # Minimum cartesian velocities
--200, -200, -150
+-30, -30, -30
 
 # Bin sizes
 1, 1, 1
@@ -29,9 +26,7 @@
 3.16227766e-13
 
 # Filename of data, for pseudodata set blank
-200pc/project3/full_clean_edr3.vot
+SN_example.vot
 
 # Do you want to log this run (Produce logfiles and save plots)? 1|0
 1
-
-
